--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,10 @@
 
 
     <com.example.graphicpractice.CustomView
+        android:id="@+id/drawview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
 
-<!--    <TextView-->
-<!--        android:id="@+id/textView"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Hello World!" />-->
 
 </LinearLayout>
